# prifhete-openfhe

./: CMakeLists.txt  README.md
.codex/environments/: environment.toml
build-codex/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  prifhete_bit_circuits_test  prifhete_plaintext_model_test  prifhete_smoke_test
build-codex/Testing/Temporary/: CTestCostData.txt
build-openfhe-placeholder/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: architecture.md  paper_to_code_map.md
src/commit/: commitment.cpp  commitment.h
src/common/: types.h
src/fhe/: binfhe_context.cpp  binfhe_context.h  bit_value.h  circuits.cpp  circuits.h
src/merkle/: merkle_tree.cpp  merkle_tree.h
src/prf/: prf.cpp  prf.h
src/proof/: proof_api.cpp  proof_api.h
src/protocol/: key_generation.cpp  key_generation.h  mint.cpp  mint.h  process_transaction.cpp  process_transaction.h  registration.cpp  registration.h  transfer.cpp  transfer.h  update_ciphertext.cpp  update_ciphertext.h
src/state/: plaintext_model.cpp  plaintext_model.h
src/wkenc/: wkenc.cpp  wkenc.h
tests/: test_bit_circuits.cpp  test_plaintext_model.cpp  test_smoke.cpp
